--- a/www/css/mc_partner.css
+++ b/www/css/mc_partner.css
@@ -287,7 +287,7 @@ body {
     background: red;
 
     position: absolute;
-    font-size: 100px;
+    font-size: 125px;
     top: 2%;
     left: 2%;
     width: 96%;
@@ -337,13 +337,15 @@ body {
    border: 2px dashed red;
     position: absolute;
     z-index: 0;
-    left: -200px;
+    left: 10%;
+    vertical-align: middle;
 }
 .reveal_word #rime{
   border: 2px dashed green;
     position: absolute;
     z-index: 1;
-    left: -100px;
+    right: 10%;
+    vertical-align: middle;
 }
 /*
 #reveal.correct #onset {
