--- a/www/css/mc_partner.css
+++ b/www/css/mc_partner.css
@@ -250,14 +250,19 @@ body {
     text-align: center;
     font-family: instructionalFont;
     font-size: 200px;
+    vertical-align: middle;
 
 }
 .stage {
     position: absolute;
+    top: 0%;
+    left:0%;
     margin-left: auto;
     margin-right: auto;
     width:100%;
+    height:100%;
     font-size: 200px;
+    vertical-align: middle;
 }
 #stage2 #onset {
     width:50%;
