--- a/platforms/ios/www/css/mc_partner.css
+++ b/platforms/ios/www/css/mc_partner.css
@@ -177,17 +177,18 @@ body {
 ** Game board
 */
 #game_container {
-    background:#2a1e8f;
+    background:#CCC;
 }
 #game_board {
-    background:#806cee;
+    background:#888;
     position:absolute;
-    top:10%;
-    left: 2%;
-    height:88%;
-    width:96%;
+    top: 1%;
+    left: 1%;
+    height:99%;
+    width:99%;
 }
 #game_header {
+    display: none;
     position:absolute;
     top: 1%;
     left: 0%;
@@ -197,7 +198,8 @@ body {
 }
 #help_button {
     position: absolute;
-    display: inline-block;
+    /*display: inline-block;*/
+    display: none;
     float: left;
     width: 74px;
     height: 74px;
@@ -209,7 +211,8 @@ body {
                                          url(../img/HelpButton_2x.png) 2x);
 }
 .student_name_box {
-    display: inline-block;
+    display: none;
+    /*display: inline-block;*/
     float:right;
     width: 25%;
     margin: 1% 0 1% 5%;
@@ -238,30 +241,28 @@ body {
 #stimulus {
     /*border: 2px solid black;*/
     color: #000000;
-    background: white;
+    background: #CCC;
     position: absolute;
-    width: 96%;
-    height: 60%;
-    top: 20%;
-    left: 2%;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
     text-align: center;
     font-family: instructionalFont;
     font-size: 200px;
+    vertical-align: middle;
 
-}
-#reveal {
-    font-size: 100px;
-    margin: 2%;
-}
-#reveal span {
-    margin: 10%;
 }
 .stage {
     position: absolute;
+    top: 0%;
+    left:0%;
     margin-left: auto;
     margin-right: auto;
     width:100%;
+    height:100%;
     font-size: 200px;
+    vertical-align: middle;
 }
 #stage2 #onset {
     width:50%;
@@ -287,21 +288,64 @@ body {
     left: 50%;
 }
 */
+#reveal {
+    background: #CCC;
+
+    position: absolute;
+    font-size: 125px;
+    top: 2%;
+    left: 2%;
+    width: 96%;
+    height: 96%;
+}
+
+#reveal #stim0 {
+    position: absolute;
+    width: 48%;
+    height: 48%;
+    top: 0%;
+    left:0%;
+}
+#reveal #stim1 {
+    position: absolute;
+    width: 48%;
+    height: 48%;
+    top: 0%;
+    right:0%;
+}
+#reveal #stim2 {
+    position: absolute;
+    width: 48%;
+    height: 48%;
+    bottom: 0%;
+    left:0%;
+}
+#reveal #stim3 {
+    position: absolute;
+    width: 48%;
+    height: 48%;
+    bottom: 0%;
+    right: 0%;
+}
+
 .reveal_word {
     position: relative;
+    margin: 48%, 48%;
     border: 2px dashed blue;
 }
 .reveal_word #onset{
    border: 2px dashed red;
     position: absolute;
     z-index: 0;
-    left: -200px;
+    left: 10%;
+    vertical-align: middle;
 }
 .reveal_word #rime{
   border: 2px dashed green;
     position: absolute;
     z-index: 1;
-    left: -100px;
+    right: 10%;
+    vertical-align: middle;
 }
 /*
 #reveal.correct #onset {
@@ -344,6 +388,7 @@ body {
     width:100%;
 }
 #score {
+    display: none;
     position:absolute;
     left:2%;
     bottom: 2%;
