--- a/www/css/mc_partner.css
+++ b/www/css/mc_partner.css
@@ -252,7 +252,7 @@ body {
 #stimulus {
     /*border: 2px solid black;*/
     color: #000000;
-    background: #CCC;
+    background: #F8F;
     position: absolute;
     width: 100%;
     height: 100%;
