--- a/platforms/ios/www/css/mc_partner.css
+++ b/platforms/ios/www/css/mc_partner.css
@@ -226,6 +226,21 @@ body {
     background: -webkit-image-set(url(../img/HelpButton.png) 1x,
                                          url(../img/HelpButton_2x.png) 2x);
 }
+#game_button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 74px;
+    height:74px;
+    border-radius: 37px;
+    z-index: 1;
+    background-color: #0F0;
+}
+
+#game_button p {
+    position: absolute;
+    top:10%;
+}
 .student_name_box {
     display: none;
     /*display: inline-block;*/
