--- a/www/css/mc_partner.css
+++ b/www/css/mc_partner.css
@@ -230,16 +230,22 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 74px;
-    height:74px;
-    border-radius: 37px;
+    width: 100px;
+    height:100px;
+    border-radius: 50px;
     z-index: 1;
-    background-color: #0F0;
+    background-color: #ff6057;
 }
 
 #game_button p {
     position: absolute;
-    top:10%;
+    top:-20%;
+    text-align: center;
+    width:100%;
+    height:100%;
+    font-size: x-large;
+    color:#EE0;
+
 }
 .student_name_box {
     display: none;
